// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Icon"
  role="img"
  viewbox="0 0 0 0"
/>
`;

exports[`composition hook should return with Icon props 1`] = `
Object {
  "children": <React.Fragment />,
  "className": "css-i5runh css-1pwrqjj css-1ccgglo fp-Box fp-Icon",
  "role": "img",
  "viewBox": "0 0 0 0",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Icon"
  role="img"
  viewbox="0 0 0 0"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<svg
  class="emotion-0 emotion-1 emotion-2 test fp-Box fp-Icon"
  role="img"
  viewBox="0 0 0 0"
/>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<svg
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Icon"
  role="img"
  viewBox="0 0 0 0"
/>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2.emotion-2.emotion-2 {
  color: #3722ed;
}

.emotion-0 {
  fill: #3722ed;
  position: relative;
  height: 1em;
  width: 1em;
}

<svg
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Icon"
  role="img"
  viewBox="0 0 0 0"
/>
`;

exports[`theming Icon.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-0 {
  background-color: red;
}

<svg
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Icon"
  role="img"
  viewBox="0 0 0 0"
/>
`;
